# Book2Markdown

./: .gitignore  Dockerfile  LICENSE  README.md  api.py  app.py  index.html  package.json  requirements.txt  setup.bat  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
backend/: bridge-protocol.json  pyproject.toml  requirements.txt
backend/src/: __init__.py  converter.py  utils.py
converters/: __init__.py  epub_converter.py  markdown_writer.py  pdf_converter.py
providers/: __init__.py  mineru_provider.py
services/: conversion_service.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Converter.tsx  Exporter.tsx  FileImporter.tsx  MarkdownPreview.tsx  Sidebar.tsx
src/hooks/: useConversion.ts
src/types/: index.ts
src/utils/: tauri-bridge.ts
tests/: test_api.py  test_conversion_service.py  test_epub_converter.py  test_markdown_writer.py  test_mineru_provider.py  test_pdf_converter.py
